fix: gap values

--- a/styles/form.css
+++ b/styles/form.css
@@ -11,7 +11,7 @@ section#form-container header h1 {
 section#form-container header form {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 0.5rem;
 }
 
 section#form-container header form div.inputs-wrapper {
